--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # for using github commands
+      - name: Github configuration
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+
       # Deploy to github pages
       - name: Deploy to Github-pages
         run: npm run deploy
