--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -25,18 +25,33 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Configure node js version
+      - name: Configure node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.14.0
 
       # Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # for using github commands
-      - name: Github configuration
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-
       # Deploy to github pages
-      - name: Deploy to Github-pages
-        run: npm run deploy
+      - name: Deploy with gh-pages
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/KevMac19/kevmac19.github.io.git
+          npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # # for using github commands1
+      # - name: Github configuration
+      #   run: |
+      #     git config user.name "GitHub Actions Bot"
+      #     git config user.email "<>"
+
+      # # Deploy to github pages
+      # - name: Deploy to Github-pages
+      #   run: npm run deploy
