--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -44,7 +44,7 @@ jobs:
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/KevMac19/kevmac19.github.io.git
           npm run deploy -u "github-actions-bot <support+actions@github.com>"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
       # # for using github commands1
       # - name: Github configuration
