--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Build react app
         run: npm run build
 
+  deploy:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
       # Deploy to github pages
       - name: Deploy to github pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
