--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -37,6 +37,7 @@ jobs:
         run: npm run build
 
   deploy:
+    needs: build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
